app-deploy-b/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: b
  labels:
    ingress: "true"
