app-deploy-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-app-b
  namespace: b
spec:
  selector:
    app: bitcoin-app-b
  ports:
    - name: http
      port: 80
      targetPort: 8080
