app-deploy-b/route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-b
  namespace: b
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: bitcoin-app-b
              servicePort: 80
            path: /serviceb(/|$)(.*)
